@@ -83,6 +83,8 @@ and last consulted characters.
 if the end of the subject was encountered in a lookahead (conditional or
 otherwise), an atomic group, or a recursion.
 
+16. Give error if pcre2test -t, -T, -tm or -TM is given an argument of zero.
+
 
 Version 10.33 16-April-2019
 ---------------------------
